--- a/Teste00/contato.html
+++ b/Teste00/contato.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="descripition" content="Um site criado por Jorge Vitor Nogueira Coelho, contendo um landing page sobre o criador do site!">
-    <title>Landing Page</title>
+    <title>Contato</title>
     <link rel="stylesheet" href="pagina.css">
 </head>
 <body>
@@ -21,20 +20,30 @@
 </header>
 <section class="home">
     <div class="home-img">
-        <img src="JORGE.jpg" alt="Imagem de perfil">
         <div class="home-content">
-            <h1>Olá, eu sou <span>Jorge Vitor</span></h1>
-            <h3 class="typing-text">Minha historia e objetivos </h3>
-            <p>Me chamo Jorge Vitor Nogueira Coelho e atualmente tenho 18 anos de idade. Nasci em 2006, em Vitória, onde moro até hoje. Neste ano de 2025, ingressei na Universidade Vila Velha, cursando Sistemas de Informação. Pretendo me tornar um excelente programador full stack ou até mesmo back-end. Aprendo muito rápido e tenho ótimas experiências com o público. Gosto bastante de praia. Estudei minha vida toda, da creche até o 9º ano do ensino fundamental, 
-            no Centro Educacional Agostiniano, e o ensino médio no SESI - Jardim da Penha.</p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-           <footer>
+          <h1><span>Contato</span></h1>  
+          <h3>Para entrar em contato fale diretamento comigo pelo numero:</h3>
+          <p>(27)99225-4515</p>
+          <h3>Ou Preencha o formulario(Forms) pelo link a seguir</h3>
+          <p>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGN4NY6P9_XAvTFPaf8Qdr_r41GwGzeECUDfYR8xohzSq7DQ/viewform?usp=sharing">Clique aqui para ter acesso ao formulario para contato</a>
+          </p>
+          <br>
+          <br>
+          <br>
+          <br> 
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
 
+
+
+
+           <footer>
             <a href="https://github.com/Jvcoelho2" target="_blank">
                 <img src="github.svg" alt="github">
                 <p>github</p>
