--- a/Teste00/logo.html
+++ b/Teste00/logo.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
+    <link rel="stylesheet" href="pagina.css">
    
 </head>
 <body>
-    <footer>
+    
         <a href="https://github.com/Jvcoelho2" target="_blank">
             <img src="github.svg" alt="github">
             <p>github</p>
@@ -16,6 +17,6 @@
             <img src="instagram.svg" alt="instagram">
             <p>Instagram</p>
         </a>
-    </footer>
+    
 </body>
 </html>
