--- a/index.html
+++ b/index.html
@@ -1,67 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula_06</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <h1>Listas</h1>
-    <strong>Lista ordenada numerica</strong>
-    <ol type="!">
-        <li>Acordar</li>
-        <!-- <li>Tomar cafe</li> -->
-        <li>Malhar na academia</li>
-        <li>trabalhar</li>
-        <li>Almoçar</li>
-        <li>Ir pra faculdade</li>
-        <li>Dormir</li>
-    </ol>
+    <h1>Meu primeiro codigo JavaScript</h1>
+    <br>
     <hr>
-    <strong>Lista ordenada escrita</strong>
-    <ol type="a">
-        <li>Acordar</li>
-        <!-- <li>Tomar cafe</li> -->
-        <li>Malhar na academia</li>
-        <li>trabalhar</li>
-        <li>Almoçar</li>
-        <li>Ir pra faculdade</li>
-        <li>Dormir</li>
+    <h2 id="resposta"></h2>
+    <script type="Text/JavaScript">
+        //document.writeln("Ola, meu codigo JavaScript Usando o Document Writeln");
+        //window.alert("Ola mundo");
+        document.getElementById("resposta").innerHTML = 
+        window.confirm("Voce esta gostando do curso?")
 
 
-
-
-    </ol>
+    </script>
     <hr>
-    <!-- Para fazer um comentario basta usar (CTRL + ;) -->
-    <strong>Lista nao ordenada</strong>
-    <ul type="circle">
-        <li>Arroz</li>
-        <li>Feijao</li>
-        <li>Leite</li>
-        <li>Manteiga</li>
-        <li>Maça</li>
-        <li>Banana</li>
-        <li>Tomate</li>
-        <li>Macarrão</li>
-
-    </ul>
-    <hr>
-    <dl>
-        <strong>Lista de definiçao</strong>
-        <dt>HTML</dt>
-        <dd>Linguagem de marcaçao para criaçao de conteudo de um site</dd>
-        <dt>CSS</dt>
-        <dd>Linguagem de marcaçao para criaçao do design de um site</dd>
-        <dt>JavaScript</dt>
-        <dd>Linguagem de programaçao para criaçao interativa de um site</dd>
-    </dl>
-    <hr>
-    
-    
 </body>
-
 </html>
