--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <h1>Meu primeiro codigo JavaScript</h1>
-    <br>
-    <hr>
-    <h2 id="resposta"></h2>
-    <script type="Text/JavaScript">
-        //document.writeln("Ola, meu codigo JavaScript Usando o Document Writeln");
-        //window.alert("Ola mundo");
-        document.getElementById("resposta").innerHTML = 
-        window.confirm("Voce esta gostando do curso?")
-
-
-    </script>
-    <hr>
+    <div id="carros"></div>
+    
+      <script src="js.js"></script>
+     
 </body>
 </html>
